Underline link to OH on hover

--- a/main.css
+++ b/main.css
@@ -35,6 +35,10 @@ footer a, .mapboxgl-popup-content a {
   color: inherit;
 }
 
+footer a, .mapboxgl-popup-content a:hover {
+  text-decoration: underline;
+}
+
 footer {
   font-size: 10pt;
   margin: auto 1ex;
