--- a/main.css
+++ b/main.css
@@ -9,9 +9,8 @@ body {
   grid-template-rows: 6ex auto 3ex;
   height: 100%;
   margin: 0;
-  transition: background-color 0.3s ease;
   background-color: rgb(0, 82, 81);
-  color: #fff;
+  color: #dee;
 }
 
 .mapboxgl-popup-content {
@@ -35,8 +34,12 @@ footer a, .mapboxgl-popup-content a {
   color: inherit;
 }
 
-a, .mapboxgl-popup-content a:hover {
-  color: blue;
+.mapboxgl-popup-content a:hover {
+  color: rgb(0, 40, 40);
+}
+
+footer a:hover {
+  color: #fff;
 }
 
 footer {
