--- a/assets/main.css
+++ b/assets/main.css
@@ -210,7 +210,10 @@ fieldset {
 .mapboxgl-popup-content .gmaps-link,
 .mapboxgl-popup-content .cm-link {
   display: inline-block;
-  padding: 0 0.6em;
+  margin: 0 0.3em;
+}
+.mapboxgl-popup-content .gmaps-link {
+  padding: 0 6px;
 }
 .mapboxgl-popup-content .gmaps-link img,
 .mapboxgl-popup-content .cm-link img {
