--- a/assets/main.css
+++ b/assets/main.css
@@ -187,6 +187,17 @@ fieldset {
   margin: 0;
 }
 
+.mapboxgl-popup-content .ticketed:before {
+  content: "";
+  display: inline-block;
+  background: url(ticket.svg) no-repeat;
+  background-size: contain;
+  width: 15px;
+  height: 15px;
+  margin-right: 0.2em;
+  vertical-align: text-top;
+}
+
 .mapboxgl-popup-content a {
   display: block;
 }
