--- a/assets/main.css
+++ b/assets/main.css
@@ -98,7 +98,7 @@ fieldset:first-child {
 
 .options label.weekend {
   color: #363;
-  background-color: #ddd;
+  background-color: #d8e8e6;
 }
 
 .options label small {
