--- a/assets/main.css
+++ b/assets/main.css
@@ -187,6 +187,118 @@ fieldset:first-child {
 }
 
 
+timerange {
+  display: grid;
+  --track-width: 30em;
+  --slider-width: calc(var(--track-width) / 26);
+  /* there are 24 tick gaps within the slider, plus
+   * some on either end for the thumbs to park in.
+   * So we want slider-width to be track-width / (24 + 2 * spare),
+   * and to offset the ticks so they land on the ends. */
+  margin: 0.3ex 0.5em 0.3ex;
+}
+
+timerange .time-text {
+  grid-area: 1 / 1;
+  text-align: center;
+  height: 2ex;
+}
+
+input[type="range"] {
+  width: var(--track-width);
+  grid-area: 2 / 1;
+  -webkit-appearance: none;
+  background-color: transparent;
+  overflow: hidden;
+  pointer-events: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 30px;
+  overflow: hidden;
+}
+input[type="range"]::-webkit-slider-thumb {
+  width: var(--slider-width);
+  -webkit-appearance: none;
+  height: 100%;
+  cursor: ew-resize;
+  background: #488;
+  border: 1px solid #688;
+  pointer-events: all;
+  position: relative;
+}
+
+input[type="range"]:focus::-webkit-slider-thumb {
+  background: #6aa;
+}
+
+timerange:hover input[type="range"]::-webkit-slider-thumb {
+  border-color: #242;
+}
+
+input[type="range"]#from_time {
+  direction: ltr;
+}
+input[type="range"]#from_time::-webkit-slider-thumb {
+  border-radius: 0 0 0 50%;
+  box-shadow: calc(var(--track-width) / -2) 0 0 calc(var(--track-width) / 2) rgba(0, 82, 81, 0.7);
+}
+/* The one at the back provides the widget.
+   It might be better to push this to another div overlaid in the container */
+input[type="range"]#from_time::-webkit-slider-runnable-track {
+  background: radial-gradient(circle at 4px 15px, #d8e8e6 0px, #d8e8e6 4px, transparent 4px),
+  radial-gradient(circle at calc(100% - 4px) 15px, #d8e8e6 0px, #d8e8e6 4px, transparent 4px),
+  linear-gradient(90deg, rgb(0, 82, 81) 6px, transparent 6px),
+  linear-gradient(270deg, rgb(0, 82, 81) 6px, transparent 6px),
+  linear-gradient(180deg, transparent 11px, #fff 11px, #d8e8e6 12px, #d8e8e6 18px, #fff 19px, transparent 19px);
+}
+
+input[type="range"]#to_time {
+  direction: rtl;
+}
+input[type="range"]#to_time::-webkit-slider-thumb {
+  border-radius: 0 0 50% 0;
+  box-shadow: calc(var(--track-width) / 2) 0 0 calc(var(--track-width) / 2) rgba(0, 82, 81, 0.7);
+}
+input[type="range"]#to_time::-webkit-slider-runnable-track {
+  background-color: transparent;
+}
+
+#time-ticks {
+  grid-area: 3 / 1;
+  display: flex;
+  justify-content: space-between;
+  /* I can't work out the correct factor here */
+  margin-left: calc(var(--slider-width) / 1.3);
+  margin-right: calc(var(--slider-width) / 1.3);
+  height: 15px;
+}
+
+#time-ticks option {
+  border-left: 1px solid #688;
+  margin: 0;
+  padding: 0;
+  width: 0;
+  min-height: 5px;
+  height: 7px;
+}
+
+#time-ticks option:nth-child(6n + 1) {
+  border-left: 1px solid #d8e8e6;
+  height: 10px;
+}
+
+.time-labels {
+  grid-area: 4 / 1;
+  display: flex;
+  justify-content: space-between;
+  font-size: 60%;
+  margin-left: calc(var(--slider-width) / 2);
+  margin-right: calc(var(--slider-width) / 2);
+}
+
+.time-labels span {
+  display: block;
+}
 
 
 .mapboxgl-popup-content {
