--- a/assets/main.css
+++ b/assets/main.css
@@ -82,8 +82,8 @@ fieldset:first-child {
 .options {
   display: inline-grid;
   grid-auto-flow: column;
-  margin: 0.3ex 0.5em 0.3ex;
-  font-size: 14pt;
+  margin: 0.4ex 0.5em 0.4ex;
+  font-size: inherit;
   height: 4.8ex;
 }
 
@@ -190,31 +190,56 @@ fieldset:first-child {
 
 timerange {
   display: grid;
-  --track-width: 30em;
+  --track-width: 21em;
   --slider-width: calc(var(--track-width) / 26);
+  --text-scale: 1;
+  --text-padding-sides: 0.2em;
   /* there are 24 tick gaps within the slider, plus
    * some on either end for the thumbs to park in.
-   * So we want slider-width to be track-width / (24 + 2 * spare),
+   * So we want slider-width to be track-width / (24 + 2 * overhang),
    * and to offset the ticks so they land on the ends. */
   margin: 0.3ex 0.5em 0.3ex;
 }
 
 @media screen and (max-width: 40em) {
   timerange {
-    --track-width: 25em;
+    --track-width: 19em;
+    --text-scale: 0.9;
+  }
+  timerange .time-text {
+    margin-top: 1px;
   }
 }
 
 @media screen and (max-width: 35em) {
   timerange {
-    --track-width: 20em;
+    --track-width: 17em;
+    --text-scale: 0.8;
+  }
+  timerange .time-text {
+    margin-top: 2px;
   }
 }
 
+timerange {
+  position: relative;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 timerange .time-text {
-  grid-area: 1 / 1;
   text-align: center;
-  height: 2ex;
+  width: 6em;
+  font-size: calc(1em * var(--text-scale));
+}
+timerange .time-text.movable {
+  position: absolute;
+  background-color: #d8e8e6;
+  border: 1px solid #688;
+  color: #686;
+  border-radius: 10px;
+  padding: 7px var(--text-padding-sides);
+  z-index: 1;
 }
 
 input[type="range"] {
@@ -224,6 +249,8 @@ input[type="range"] {
   background-color: transparent;
   overflow: hidden;
   pointer-events: none;
+  height: 2.8ex;
+  font-size: inherit;
 }
 /* Chrome gets upset if you combine these */
 input[type="range"]::-webkit-slider-runnable-track {
@@ -322,7 +349,7 @@ input[type="range"]#to_time::-moz-range-track {
   /* I can't work out the correct factor here */
   margin-left: calc(var(--slider-width) / 1.3);
   margin-right: calc(var(--slider-width) / 1.3);
-  height: 15px;
+  height: 1ex;
 }
 
 #time-ticks option {
@@ -472,7 +499,7 @@ input[type="range"]#to_time::-moz-range-track {
 
 .connect-google {
   background-color: #488;
-  font-size: 14pt;
+  font-size: inherit;
   font-family: inherit;
   color: #fff;
   border-radius: 15px;
