--- a/assets/main.css
+++ b/assets/main.css
@@ -482,6 +482,13 @@ input[type="range"]#to_time::-moz-range-track {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3) !important;
 }
 
+.mapboxgl-popup-content img {
+  width: 100%;
+  height: 14ex;
+  object-fit: cover;
+  transition: opacity 1s;
+}
+
 .mapboxgl-popup-content dl {
   display: grid;
   grid-template: auto / 8em 1fr;
@@ -527,7 +534,6 @@ input[type="range"]#to_time::-moz-range-track {
 
 .mapboxgl-popup-content header {
   background-color: #d8e8e6;
-  margin-bottom: 1ex;
   height: 45px;
 }
 
@@ -537,6 +543,10 @@ input[type="range"]#to_time::-moz-range-track {
 
 .mapboxgl-popup-content section {
   margin: 5px;
+}
+
+.mapboxgl-popup-content img.hero + section {
+  margin-top: 0;
 }
 
 .mapboxgl-popup-content input.bookmark {
@@ -564,6 +574,10 @@ input[type="range"]#to_time::-moz-range-track {
 
 .mapboxgl-popup-content a {
   touch-action: none;
+}
+
+.mapboxgl-popup-content .no-hero .ohl-link {
+  margin-top: 1ex;
 }
 
 .mapboxgl-popup-content .gmaps-link,
